...
            android:textColor="#00aeff"
            app:layout_constraintBottom_toBottomOf="@+id/textView_add_mood"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView_add_mood" />

        <Button
            android:id="@+id/add_done_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@android:color/transparent"
            android:padding="8dp"
            android:text="@string/done"
...
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="0dp">

                <Button
                    android:id="@+id/AddMoodSelectMood"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/edit_mood_card_button"
...
                    android:textStyle="italic"
                    app:layout_constraintBottom_toBottomOf="@+id/textViewAddReasontext"
                    app:layout_constraintStart_toEndOf="@+id/textViewAddReasontext"
                    app:layout_constraintTop_toTopOf="@+id/textViewAddReasontext" />

                <EditText
                    android:id="@+id/addReason"
                    android:layout_width="346dp"
                    android:layout_height="135dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/edit_mood_reason_text_box"
...
                        android:paddingEnd="8dp"
                        android:text="@string/pair"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                    <RadioButton
                        android:id="@+id/AddradioGroup"
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:layout_marginStart="4dp"
                        android:layout_marginEnd="4dp"
                        android:layout_weight="1"
                        android:background="@drawable/edit_mood_radio_button_selector"
...
