...
            android:textColor="#00aeff"
            app:layout_constraintBottom_toBottomOf="@+id/textView_edit_mood"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView_edit_mood" />

        <Button
            android:id="@+id/done_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@android:color/transparent"
            android:padding="8dp"
            android:text="@string/done"
...
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="0dp">

                <Button
                    android:id="@+id/btnEditMoodSelectMood"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/edit_mood_card_button"
...
                    android:textStyle="italic"
                    app:layout_constraintBottom_toBottomOf="@+id/textViewReasontext"
                    app:layout_constraintStart_toEndOf="@+id/textViewReasontext"
                    app:layout_constraintTop_toTopOf="@+id/textViewReasontext" />

                <EditText
                    android:id="@+id/editReason"
                    android:layout_width="0dp"
                    android:layout_height="135dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/edit_mood_reason_text_box"
...
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewSocialSituationText">

                    <RadioButton
                        android:id="@+id/radioAlone"
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:layout_marginEnd="4dp"
                        android:layout_weight="1"
                        android:background="@drawable/edit_mood_radio_button_selector"
                        android:button="@null"
...
