...
            android:id="@+id/viewMoreDetails"
            style="@android:style/Widget.Button"
            android:layout_width="175dp"
            android:layout_height="45dp"
            android:layout_marginTop="44dp"
            android:background="@drawable/details_button"
            android:text="View More Details"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

...
